knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/pqcrush__Mapping__c.object-meta.xml
<CustomObject>
    <description>Polymorphic Relationship Mapping Object</description>
    <label>Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>