knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/fields/pqcrush__DisplayLabelField__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__DisplayLabelField__c</fullName>
    <description>Fully qualified API name used as the display label</description>
    <label>Label Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>