knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/fields/pqcrush__GroupResults__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__GroupResults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Group the records matching this mapping</description>
    <inlineHelpText>Records fetched for this mapping will be grouped together if they have the same label (used for row/column template)</inlineHelpText>
    <label>Group Results</label>
    <type>Checkbox</type>
</CustomField>