knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/fields/pqcrush__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ObjectType__c</fullName>
    <description>Fully qualified object type name</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>