knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/fields/pqcrush__ParentField__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ParentField__c</fullName>
    <label>Parent Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>