knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/fields/pqcrush__ValueField__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__ValueField__c</fullName>
    <description>Fully qualified API name of field to lookup for a value</description>
    <label>Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>