knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Mapping__c/validationRules/pqcrush__Cannot_group_with_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Cannot_group_with_parent</fullName>
    <active>true</active>
    <description>Cannot set both grouping and parent relationship on a mapping</description>
    <errorConditionFormula>AND(pqcrush__GroupResults__c, NOT(OR(ISNULL(pqcrush__ParentField__c ), ISBLANK(pqcrush__ParentField__c))))</errorConditionFormula>
    <errorMessage>Cannot use Grouping and Parent/Child relationship at the same time</errorMessage>
</ValidationRule>